--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-phone d-flex align-items-center"><span>09371962511</span></i>
+        <i class="bi bi-phone d-flex align-items-center"><a href="tel:09371962511" class="text-white">09371962511</a></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span id="time"></span></i>
       </div>
 
@@ -372,12 +372,13 @@
     </section><!-- End Specials Section -->
 
     <!-- ======= Events Section ======= -->
-    <section id="events" class="events">
+    <section id="events" class="events" dir="rtl">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Events</h2>
-          <p>Organize Your Events in our Restaurant</p>
+          <h2>پیشنهادها</h2>
+          <p>رویدادهای خود را در رستوران ما سازماندهی کنید
+          </p>
         </div>
 
         <div class="events-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -389,23 +390,17 @@
                   <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>جشن تولد</h3>
                   <div class="price">
                     <p><span>$189</span></p>
                   </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
+                  <p class="fst-italic">درد به خودی خود عشق به درد است، مشکلات اصلی زیست محیطی، اما من به این نوع زمان می دهم تا به زمین بیفتم، به طوری که یک درد و درد بزرگ.</p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
+                  <li>اما درد فیلم به لذتی که می&zwnj;خواهد محکوم کند آسیب&zwnj;رسان است.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
                   </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  <p>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن. درد در لذت مقصر است</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -416,23 +411,17 @@
                   <img src="assets/img/event-private.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>مهمانی خصوصی</h3>
                   <div class="price">
                     <p><span>$290</span></p>
                   </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
+                  <p class="fst-italic">درد به خودی خود عشق به درد است، مشکلات اصلی زیست محیطی، اما من به این نوع زمان می دهم تا به زمین بیفتم، به طوری که یک درد و درد بزرگ.</p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
+                  <li>اما درد فیلم به لذتی که می&zwnj;خواهد محکوم کند آسیب&zwnj;رسان است.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
                   </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  <p>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن. درد در لذت مقصر است</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -443,23 +432,17 @@
                   <img src="assets/img/event-custom.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
+                  <h3>مهمانی سفارشی</h3>
                   <div class="price">
                     <p><span>$99</span></p>
                   </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
+                  <p class="fst-italic">درد به خودی خود عشق به درد است، مشکلات اصلی زیست محیطی، اما من به این نوع زمان می دهم تا به زمین بیفتم، به طوری که یک درد و درد بزرگ.</p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
+                  <li>اما درد فیلم به لذتی که می&zwnj;خواهد محکوم کند آسیب&zwnj;رسان است.</li>
+                  <li>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن.</li>
                   </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  <p>هیچ مدرسه ای نمی تواند کار کند مگر برای رسیدن به اهداف از آن. درد در لذت مقصر است</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -729,7 +712,7 @@
               <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>سارا جانسن</h4>
+                  <h4>سارا</h4>
                   <span>کیک پز</span>
                 </div>
                 <div class="social">
@@ -747,7 +730,7 @@
               <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>ویلیام اندرسون</h4>
+                  <h4>محمد</h4>
                   <span>آشپز</span>
                 </div>
                 <div class="social">
@@ -789,7 +772,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>موقعیت :</h4>
-                <p>تهران ، اندرزگو ، خیابان اسماعیلی</p>
+                <p>تهران ، ورامین ، خیابان پورشیرازی</p>
               </div>
 
               <div class="open-hours">
@@ -861,15 +844,15 @@
             <div class="footer-info">
               <h3>رستوران</h3>
               <p>
-                تهران ، میرداماد  <br>
-                خیابان تهرانی ، چهار راه اول<br><br>
+                تهران ، ورامین  <br>
+                خیابان پورشیرازی<br><br>
                  <strong>تماس : </strong><a href="tel:09371962511"> 2511-196-0937 </a><br>
                 <strong>ایمیل : </strong><a href="mailto:m.mahdibaseri@gmail.com">m.mahdibaseri@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://instagram.com/baseri.web/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://instagram.com/M.mahdi_bsr/" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
@@ -913,14 +896,10 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span> Baseri Web </span></strong> . All Rights Reserved
+        &copy; Copyright <strong><span> M.mahdi_bsr </span></strong> . All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-        Designed by <a href="https://instagram.com/baseri.web/">Baseri Web</a>
+        Designed by <a href="https://instagram.com/M.mahdi_bsr/">M.mahdi_bsr</a>
       </div>
     </div>
   </footer><!-- End Footer -->
