--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
           <li><a class="nav-link scrollto" href="#menu">منو</a></li>
           <li><a class="nav-link scrollto" href="#specials">مخصوص</a></li>
           <li><a class="nav-link scrollto" href="#events">پیشنهاد ها</a></li>
-          <li><a class="nav-link scrollto" href="#chefs">آشپز ها</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">گالری</a></li>
+          <li id="chefs-link"><a class="nav-link scrollto" href="#chefs">آشپز ها</a></li>
+          <li id="res-chefs-link"><a class="nav-link scrollto" href="#res-chefs">آشپز ها</a></li>
+          <li id="gallery-link"><a class="nav-link scrollto" href="#gallery">گالری</a></li>
+          <li id="res-gallery-link"><a class="nav-link scrollto" href="#res-gallery">گالری</a></li>
           <li><a class="nav-link scrollto" href="#contact">ارتباط با ما</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -297,7 +299,7 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-3">
-            <ul class="nav nav-tabs flex-column">
+            <ul class="nav nav-tabs flex-column p-0">
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">پیتزا مارگاریتا</a>
               </li>
@@ -676,9 +678,89 @@
         </div>
 
       </div>
-    </section><!-- End Gallery Section -->
+    </section>
+    <section id="res-gallery" class="gallery" dir="rtl">
+
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>گالری</h2>
+          <p>چند عکس از رستوران ما</p>
+        </div>
+      </div>
+
+      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+
+        <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-interval=2000">
+              <div class="gallery-item">
+                <a href="assets/img/gallery/gallery-1.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                  <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+                </a>
+              </div>            
+            </div>
+            <div class="carousel-item" data-interval=2000">
+              <div class="gallery-item">
+                <a href="assets/img/gallery/gallery-2.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                  <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item" data-interval=2000">
+              <div class="gallery-item">
+                <a href="assets/img/gallery/gallery-3.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                  <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+                </a>
+              </div>
+            </div>
+              <div class="carousel-item" data-interval=2000">
+                <div class="gallery-item">
+                  <a href="assets/img/gallery/gallery-4.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                    <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+                  </a>
+                </div>
+              </div>
+          <div class="carousel-item" data-interval=2000">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-5.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-interval=2000">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-6.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-interval=2000">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-7.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-interval=2000">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-8.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Gallery Section -->
 
     <!-- ======= Chefs Section ======= -->
+
+
     <section id="chefs" class="chefs" dir="rtl">
       <div class="container" data-aos="fade-up">
 
@@ -746,7 +828,73 @@
         </div>
 
       </div>
-    </section><!-- End Chefs Section -->
+    </section>
+    <section id="res-chefs" class="chefs" dir="rtl">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>آشپزها</h2>
+          <p>سرآشپزهای حرفه ای ما</p>
+        </div>
+
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-touch="false" data-ride="carousel">
+          <div class="carousel-inner" >
+            <div class="carousel-item active" data-interval="2000">
+                <div class="member" style="border-radius: 4px;" data-aos="zoom-in" data-aos-delay="500">
+                  <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
+                  <div class="member-info">
+                    <div class="member-info-content">
+                      <h4>سارا</h4>
+                      <span>کیک پز</span>
+                    </div>
+                    <div class="social">
+                      <a href=""><i class="bi bi-twitter"></i></a>
+                      <a href=""><i class="bi bi-facebook"></i></a>
+                      <a href=""><i class="bi bi-instagram"></i></a>
+                      <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>            
+            <div class="carousel-item" data-interval="2000">
+                <div class="member" style="border-radius: 4px;" data-aos="zoom-in" data-aos-delay="300">
+                  <img src="assets/img/chefs/nusret.jpg" class="img-fluid" alt="">
+                  <div class="member-info">
+                    <div class="member-info-content">
+                      <h4>نصرت</h4>
+                      <span>سرآشپز</span>
+                    </div>
+                    <div class="social">
+                      <a href=""><i class="bi bi-twitter"></i></a>
+                      <a href=""><i class="bi bi-facebook"></i></a>
+                      <a href=""><i class="bi bi-instagram"></i></a>
+                      <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <div class="carousel-item" data-interval="2000">
+                <div class="member" style="border-radius: 4px;" data-aos="zoom-in" data-aos-delay="300">
+                  <img src="assets/img/chefs/chefs-4.jpg" class="img-fluid" alt="">
+                  <div class="member-info">
+                    <div class="member-info-content">
+                      <h4>محمد</h4>
+                      <span>آشپز</span>
+                    </div>
+                    <div class="social">
+                      <a href=""><i class="bi bi-twitter"></i></a>
+                      <a href=""><i class="bi bi-facebook"></i></a>
+                      <a href=""><i class="bi bi-instagram"></i></a>
+                      <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- End Chefs Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact" dir="rtl">
@@ -759,7 +907,7 @@
       </div>
 
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3235.92925795774!2d51.45253651562243!3d35.80166998016657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e05b9213a0ef5%3A0xeb00fed564218403!2sTehran%20Province%2C%20Tehran%2C%20Andarzgoo%20Blvd%2C%20Iran!5e0!3m2!1sen!2s!4v1637914977788!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3235.92925795774!2d51.45253651562243!3d35.80166998016657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e05b9213a0ef5%3A0xeb00fed564218403!2sTehran%20Province%2C%20Tehran%2C%20Andarzgoo%20Blvd%2C%20Iran!5e0!3m2!1sen!2s!4v1637914977788!5m2!1sen!2s" frameborder="0" allowfullscreen></iframe>
       </div>
       
 
@@ -768,7 +916,7 @@
         <div class="row mt-5">
 
           <div class="col-lg-4">
-            <div class="info">
+            <div class="info" style="text-align: right">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>موقعیت :</h4>
@@ -839,7 +987,6 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>رستوران</h3>
@@ -859,7 +1006,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-2 col-md-6 col-6 footer-links">
             <h4>لینک های مفید</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">خانه</a></li>
@@ -870,7 +1017,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 col-6 footer-links">
             <h4>سیرویس های ما</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">طراحی وب</a></li>
@@ -914,6 +1061,8 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
