Update the proj

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Resturant Baseri Web
-  * Author: Baseri Web Group
+  * Template Name: Resturant M.mahdi_bsr
+  * Author: M.mahdi_bsr Group
   ======================================================== -->
 </head>
 
@@ -41,7 +41,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-phone d-flex align-items-center"><a href="tel:09371962511" class="text-white">09371962511</a></i>
+        <i class="bi bi-phone d-flex align-items-center"><a href="tel:09121111111" class="text-white">09121111111</a></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span id="time"></span></i>
       </div>
 
@@ -993,15 +993,15 @@
               <p>
                 تهران ، ورامین  <br>
                 خیابان پورشیرازی<br><br>
-                 <strong>تماس : </strong><a href="tel:09371962511"> 2511-196-0937 </a><br>
+                 <strong>تماس : </strong><a href="tel:09121111111"> 1111-111-0912 </a><br>
                 <strong>ایمیل : </strong><a href="mailto:m.mahdibaseri@gmail.com">m.mahdibaseri@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://instagram.com/M.mahdi_bsr/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -1046,7 +1046,7 @@
         &copy; Copyright <strong><span> M.mahdi_bsr </span></strong> . All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://instagram.com/M.mahdi_bsr/">M.mahdi_bsr</a>
+        Edited by <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/">M.mahdi_bsr</a>
       </div>
     </div>
   </footer><!-- End Footer -->
