--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>رستوران</title>
+  <title>کافه</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-phone d-flex align-items-center"><a href="tel:09121111111" class="text-white">09121111111</a></i>
+        <i class="bi bi-phone d-flex align-items-center"><a href="tel:09102797344" class="text-white">09102797344</a></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span id="time"></span></i>
       </div>
 
@@ -58,7 +58,7 @@
   <header id="header" class="fixed-top d-flex align-items-center" dir="rtl">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="/">رستوران</a></h1>
+      <h1 class="logo"><a href="/">کافه</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -87,7 +87,7 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row flex-row-reverse">
         <div class="col-lg-8 mb-5">
-          <h1 class="mb-3">به <span>رستوران </span>خوش آمدید </h1>
+          <h1 class="mb-3">به <span>کافه </span>خوش آمدید </h1>
           <h2>!ارائه غذاهای عالی برای بیش از 18 سال</h2>
 
           <div class="btns">
@@ -116,17 +116,17 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>رستوران</h3>
+            <h3>کافه</h3>
             <p class="fst-italic">
-             رستوران ما از سال 1390 تا الان مشغول به کار میباشد.
+             کافه ما از سال 1390 تا الان مشغول به کار میباشد.
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> با بیش از 10 شعبه در سراسر کشور.</li>
               <li><i class="bi bi-check-circle"></i>10 سال سابقه.</li>
-              <li><i class="bi bi-check-circle"></i>دارای لوح بهترین رستوران از وزارت بهداشت.</li>
+              <li><i class="bi bi-check-circle"></i>دارای لوح بهترین کافه از وزارت بهداشت.</li>
             </ul>
             <p>
-              رستوران ما در یک محیط بسیار جذاب و دنج قرار دارد که بهترین غذاهای سنتی و فست فود را برای مشتریان خود فراهم می کند. <br> کیفیت و تنوع غذایی رستوران ما بسیار زیاد است که برای هر ذائقه ای مناسب می باشد.
+              کافه ما در یک محیط بسیار جذاب و دنج قرار دارد که بهترین غذاهای سنتی و فست فود را برای مشتریان خود فراهم می کند. <br> کیفیت و تنوع غذایی کافه ما بسیار زیاد است که برای هر ذائقه ای مناسب می باشد.
             </p>
           </div>
         </div>
@@ -140,7 +140,7 @@
 
         <div class="section-title">
           <h2>چرا ما</h2>
-          <p>چرا رستوران ما را انتخاب کنید</p>
+          <p>چرا کافه ما را انتخاب کنید</p>
         </div>
 
         <div class="row">
@@ -156,8 +156,8 @@
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
-              <h4>پاکیزگی رستوران</h4>
-              <p>محیط رستوران باید از آرامش و تمیزی عالی برخوردار باشد به ما اعتماد کنید که این شرایط را فراهم خواهیم کرد.</p>
+              <h4>پاکیزگی کافه</h4>
+              <p>محیط کافه باید از آرامش و تمیزی عالی برخوردار باشد به ما اعتماد کنید که این شرایط را فراهم خواهیم کرد.</p>
             </div>
           </div>
 
@@ -335,7 +335,7 @@
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>استیک گریل شده</h3>
                     <p class="fst-italic">استیک گوشت یکی از انواع غذاهای خوشمزه و پرطرفدار است که به عنوان یک غذای بین المللی در سراسر جهان شناخته می شود، برای مشاهده این آموزش آشپزی در ادامه با چیشی همراه باشید.</p>
-                    <p>در رستوران ما بهترین استیک عمر خود را تجربه خواهید کرد.</p>
+                    <p>در کافه ما بهترین استیک عمر خود را تجربه خواهید کرد.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/menu/meat-stack.jpg" alt="" class="img-fluid my-2 rounded-circle">
@@ -359,7 +359,7 @@
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>بیف استراگانف</h3>
                     <p class="fst-italic">بیف استروگانف یک غذای خوشمزه روسی است که از گوشت و خامه تهیه میشود. “بیف استروگانف” با پاستا و برنج و سیب زمینی نیز سرو میشود.</p>
-                    <p>با دستور پخت مخصوص آشپزهای ما طعم جدیدی از این غذا را در رستوران ما تجربه کنی.</p>
+                    <p>با دستور پخت مخصوص آشپزهای ما طعم جدیدی از این غذا را در کافه ما تجربه کنی.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/menu/bif.jpg" alt="" class="img-fluid my-2 rounded-circle">
@@ -379,7 +379,7 @@
 
         <div class="section-title">
           <h2>پیشنهادها</h2>
-          <p>رویدادهای خود را در رستوران ما سازماندهی کنید
+          <p>رویدادهای خود را در کافه ما سازماندهی کنید
           </p>
         </div>
 
@@ -524,7 +524,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
-                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت کافه و غذا ثبت کنید تا در اینجا نمایش داده شود. 
                      نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
                   <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -538,7 +538,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
-                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت کافه و غذا ثبت کنید تا در اینجا نمایش داده شود. 
                      نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
                   <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -552,7 +552,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
-                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت کافه و غذا ثبت کنید تا در اینجا نمایش داده شود. 
                      نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
                   <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -566,7 +566,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
-                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت کافه و غذا ثبت کنید تا در اینجا نمایش داده شود. 
                      نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
                   <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -580,7 +580,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx mx-2 bxs-quote-alt-left quote-icon-left"></i>
-                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت رستوران و غذا ثبت کنید تا در اینجا نمایش داده شود. 
+                    نظرات شما در اینجا قرار میگیرد. شما میتوانید نظرات خود را درباره ی کیفیت کافه و غذا ثبت کنید تا در اینجا نمایش داده شود. 
                      نطرات و انتقادات شما باعث افتخار ماست و با تمام تلاش به انها رسیدگی میشود.
                   <i class="bx mx-2 bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -603,7 +603,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>گالری</h2>
-          <p>چند عکس از رستوران ما</p>
+          <p>چند عکس از کافه ما</p>
         </div>
       </div>
 
@@ -684,7 +684,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>گالری</h2>
-          <p>چند عکس از رستوران ما</p>
+          <p>چند عکس از کافه ما</p>
         </div>
       </div>
 
@@ -920,7 +920,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>موقعیت :</h4>
-                <p>تهران ، ورامین ، خیابان پورشیرازی</p>
+                <p>تهران ، خیابان ولیعصر ، پلاک 55</p>
               </div>
 
               <div class="open-hours">
@@ -941,7 +941,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>تماس :</h4>
-                <p>0937-196-2511</p>
+                <p>0910-420-7344</p>
               </div>
 
             </div>
@@ -989,17 +989,17 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>رستوران</h3>
+              <h3>کافه</h3>
               <p>
                 تهران ، ورامین  <br>
                 خیابان پورشیرازی<br><br>
-                 <strong>تماس : </strong><a href="tel:09121111111"> 1111-111-0912 </a><br>
+                 <strong>تماس : </strong><a href="tel:09104207344"> 7344-420-0910 </a><br>
                 <strong>ایمیل : </strong><a href="mailto:m.mahdibaseri@gmail.com">m.mahdibaseri@gmail.com</a><br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="instagram:baseritech_co" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
@@ -1029,11 +1029,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>خبرنامه ما</h4>
+            <img src="assets/img/dark-logo.png" width="200px" alt="">
+            <!-- <h4>خبرنامه ما</h4>
             <p>برای اطلاع از غذاهای ما و کارهای خفن ما در خبرنامه عضو شوید.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" class="" value="عضویت">
-            </form>
+            </form> -->
 
           </div>
 
@@ -1043,10 +1044,10 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span> M.mahdi_bsr </span></strong> . All Rights Reserved
+        &copy; Copyright <strong><span> BASERI TECH </span></strong> . All Rights Reserved
       </div>
       <div class="credits">
-        Edited by <a href="https://www.linkedin.com/in/mohamadmahdi-baseri-5b8aa5296/">M.mahdi_bsr</a>
+        Edited by <a href="instagram:baseritech_co">BASERI TECH</a>
       </div>
     </div>
   </footer><!-- End Footer -->
